Commit to temp branch after reset